fixed sign button position of nav on tablet and mobile

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -556,6 +556,14 @@ footer {
             }
         }
     }
+
+    // Fixing sign button
+    .nav-wrapper {
+        a.modal-trigger {
+            position: relative;
+            left: 50px;
+        }
+    }
 }
 
 // Table devices 992px and down
